force-app/main/default/objects/CaseHandoffMapping__mdt/CaseHandoffMapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Hand-off Mapping</label>
    <pluralLabel>Case Hand-off Mappings</pluralLabel>
</CustomObject>