force-app/main/default/objects/CaseHandoffMapping__mdt/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <description>Business Unit</description>
    <inlineHelpText>Business Unit such as &quot;AustraliaPost&quot; or &quot;StarTrack&quot;</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AustraliaPost</fullName>
                <default>true</default>
                <label>AustraliaPost</label>
            </value>
            <value>
                <fullName>StarTrack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>