force-app/main/default/objects/CaseHandoffMapping__mdt/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <description>To store field mappings between Unified and Classic in JSON format. This JSON is utilised by the case hand-off Apex controller to facilitate the transformation of field values.</description>
    <inlineHelpText>To store field mappings between Unified and Classic in JSON format. This JSON is utilised by the case hand-off Apex controller to facilitate the transformation of field values.</inlineHelpText>
    <label>Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>