force-app/main/default/objects/CaseHandoffMapping__mdt/fields/UnifiedRecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>UnifiedRecordTypeDeveloperName__c</fullName>
    <description>Unified Record Type  Developer Name</description>
    <inlineHelpText>Unified Record Type  Developer Name</inlineHelpText>
    <label>Unified Record Type Developer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnifiedInvestigation</fullName>
                <default>true</default>
                <label>UnifiedInvestigation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>