force-app/main/default/objects/CaseHandoffMapping__mdt/listViews/CaseHandoffMappings.listView-meta.xml
<ListView>
    <fullName>CaseHandoffMappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BusinessUnit__c</columns>
    <columns>UnifiedRecordTypeDeveloperName__c</columns>
    <columns>Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>Case Hand-off Mappings</label>
    <language>en_US</language>
</ListView>